step 0: embed jlawyer in SwingBridge