@@ -9,8 +9,9 @@
     
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <vaadin.version>25.1.1</vaadin.version>
-        <swing-bridge.version>1.1.1</swing-bridge.version>
+        <swing-bridge.version>1.2-SNAPSHOT</swing-bridge.version>
         <swing-bridge.path>${settings.localRepository}/com/vaadin</swing-bridge.path>
     </properties>
     
@@ -32,6 +33,51 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <repositories>
+        <repository>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <id>central</id>
+            <url>https://repo1.maven.org/maven2</url>
+        </repository>
+        <repository>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <id>vaadin-prereleases</id>
+            <url>https://maven.vaadin.com/vaadin-prereleases</url>
+        </repository>
+        <repository>
+            <releases>
+                <enabled>true</enabled>
+                <checksumPolicy>ignore</checksumPolicy>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <checksumPolicy>ignore</checksumPolicy>
+            </snapshots>
+            <id>project-local</id>
+            <url>file://${project.basedir}/jlawyer-server-repo</url>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <id>central</id>
+            <url>https://repo1.maven.org/maven2</url>
+        </pluginRepository>
+        <pluginRepository>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <id>vaadin-prereleases</id>
+            <url>https://maven.vaadin.com/vaadin-prereleases</url>
+        </pluginRepository>
+    </pluginRepositories>
     
     <dependencies>
         <dependency>
@@ -56,6 +102,61 @@
             </exclusions>
         </dependency>
 
+        <!-- from local repo: START -->
+        <dependency>
+            <groupId>de.governikus.bea</groupId>
+            <artifactId>KSWToolkit</artifactId>
+            <version>3.20.0.1-local</version>
+        </dependency>
+        <dependency>
+            <groupId>com.lowagie</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>1.3.22-local</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jdimension.jlawyer</groupId>
+            <artifactId>j-lawyer-bea-wrapper</artifactId>
+            <version>1.0-local</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jdimension.jlawyer</groupId>
+            <artifactId>j-lawyer-cloud</artifactId>
+            <version>1.0-local-relocated</version>
+            <classifier>relocated</classifier>
+            <exclusions>
+                <exclusion>
+                <groupId>com.jdimension.jlawyer</groupId>
+                <artifactId>j-lawyer-cloud</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.jdimension.jlawyer</groupId>
+            <artifactId>j-lawyer-fax</artifactId>
+            <version>1.0-local</version>
+        </dependency>
+            <dependency>
+            <groupId>com.jdimension.jlawyer</groupId>
+            <artifactId>j-lawyer-invoicing</artifactId>
+        <version>1.0-local</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jdimension.jlawyer</groupId>
+            <artifactId>j-lawyer-server-api</artifactId>
+            <version>1.0-local</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jdimension.jlawyer</groupId>
+            <artifactId>j-lawyer-server-common</artifactId>
+            <version>1.0-local</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jdimension.jlawyer</groupId>
+            <artifactId>j-lawyer-server-entities</artifactId>
+            <version>1.0-local</version>
+        </dependency>
+        <!-- from local repo: END -->
+
         <dependency>
             <groupId>com.vaadin</groupId>
             <!-- Replace artifactId with vaadin-core to use only free components -->
@@ -65,6 +166,53 @@
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-spring-boot-starter</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-to-slf4j</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-classic</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-1.2-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j2-impl</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.wildfly</groupId>
+            <artifactId>wildfly-naming-client</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss</groupId>
+            <artifactId>jboss-ejb-client</artifactId>
+            <version>5.0.8.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.5.2.Final</version>
+        </dependency>
+
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-dev</artifactId>
@@ -127,6 +275,23 @@
                         <java.awt.headless>false</java.awt.headless>
                         <!--<applibs.dir>${project.basedir}/some-lib-dir</applibs.dir>-->
                     </systemPropertyVariables>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <release combine.self="override"/>
+                    <compilerArgs>
+                        <arg>--add-exports=java.desktop/sun.font=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.desktop/java.awt=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.desktop/sun.java2d.pipe=ALL-UNNAMED</arg>
+                    </compilerArgs>
+                    <proc>none</proc>
                 </configuration>
             </plugin>
         </plugins>
